--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
 
      <img class="slikica" src="https://cdn.discordapp.com/attachments/923897529509220352/935648331814830130/download__4_-removebg-preview.png">
 
-     <div id="vrijeme" style=" color: rgb(255, 255, 255); text-align: center; font-size: 3.5vh; font-weight: 800; position: fixed; left: 75vh; text-shadow: .1vh .1vh .1vh rgba(0, 0, 0, 0.563); top: 68vh;">
+     <div id="cijena" style=" color: rgb(255, 255, 255); text-align: center; font-size: 3.5vh; font-weight: 800; position: fixed; left: 75vh; text-shadow: .1vh .1vh .1vh rgba(0, 0, 0, 0.563); top: 68vh;">
          WASH PRICE : 40
      </div>
       </div>
